Add support for CC

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,5 +1,6 @@
-SRCS = $(wildcard *.cpp)
+SRCS = $(wildcard *.cpp *.c)
 OBJS = $(SRCS:.cpp=.o)
+OBJS := $(OBJS:.c=.o)
 
 all: $(OBJS)
 
@@ -7,3 +8,6 @@ $(OBJS): clean
 
 clean:
 	rm -f *.o
+
+dbg-%:
+	@echo "Makefile: Value of $* = $($*)"
