Add unit test infrastructure

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,11 +1,12 @@
 all: tests
 
-tests: functional_tests
+tests: functional_tests unit_tests
 
 clean:
 	cd functional_tests && $(MAKE) $@
+	cd unit_tests && $(MAKE) $@
 
-functional_tests:
+functional_tests unit_tests:
 	cd $@ && $(MAKE)
 
-.PHONY: tests functional_tests
+.PHONY: tests functional_tests unit_tests
