Add gencc objects to unit tests

--- a/tests/unit_tests/Makefile
+++ b/tests/unit_tests/Makefile
@@ -3,25 +3,29 @@ include $(ROOT)/common.mk
 
 CXXFLAGS += -I$(CURDIR)/googletest
 
-SRC = $(wildcard *.cpp) $(wildcard googletest/*.cpp)
+TESTS_BUILD_DIR = $(BUILD_DIR)/unit_tests
 
-OBJ = $(SRC:.cpp=.o)
-OBJ := $(foreach obj,$(OBJ),$(BUILD_DIR)/$(obj))
+TESTS_SRC = $(wildcard *.cpp) $(wildcard googletest/*.cpp)
+TESTS_OBJ = $(TESTS_SRC:.cpp=.o)
+TESTS_OBJ := $(foreach obj,$(TESTS_OBJ),$(TESTS_BUILD_DIR)/$(obj))
+
+OBJ := $(filter-out $(BUILD_DIR)/src/main.o,$(OBJ))
+OBJ += $(TESTS_OBJ)
 
 all: run_unit_tests
 
-$(BUILD_DIR)/%.o: %.cpp
+$(TESTS_BUILD_DIR)/%.o: %.cpp
 	@mkdir -p $(shell dirname $@)
 	$(CXX) $(CXXFLAGS) -c -o $@ $<
 
-unit_tests: $(OBJ)
+unit_tests: $(TESTS_OBJ)
 	$(CXX) $(CXXFLAGS) -o $(ROOT)/$@ $(OBJ)
 
 run_unit_tests: unit_tests
 	$(ROOT)/unit_tests
 
 clean:
-	rm -rf $(BUILD_DIR)/unit_tests
+	rm -rf $(TESTS_BUILD_DIR)
 
-.PHONY: clean run_unit_tests
+.PHONY: clean run_unit_tests unit_tests
 
