Refactor a few names and don't test coverage for gtest source code

--- a/tests/unit_tests/Makefile
+++ b/tests/unit_tests/Makefile
@@ -1,13 +1,18 @@
 ROOT = $(CURDIR)/../..
 include $(ROOT)/common.mk
 
-CXXFLAGS += -fsanitize=address --coverage -I$(CURDIR)/googletest
+CXXFLAGS += -I$(CURDIR)/googletest
+GTEST_CXXFLAGS := $(CXXFLAGS)
+CXXFLAGS += -fsanitize=address --coverage
 
 TESTS_BUILD_DIR = $(BUILD_DIR)/tests/unit_tests
 
-TESTS_SRC = $(wildcard *.cpp) $(wildcard googletest/*.cpp)
+TESTS_SRC = $(wildcard *.cpp)
 TESTS_OBJ = $(TESTS_SRC:.cpp=.o)
 TESTS_OBJ := $(foreach obj,$(TESTS_OBJ),$(TESTS_BUILD_DIR)/$(obj))
+GTEST_SRC = googletest/gmock-gtest-all.cc
+GTEST_OBJ = $(TESTS_BUILD_DIR)/googletest/gmock-gtest-all.o
+TESTS_OBJ += $(GTEST_OBJ)
 
 OBJ := $(filter-out $(BUILD_DIR)/src/main.o,$(OBJ))
 OBJ += $(TESTS_OBJ)
@@ -15,6 +20,10 @@ OBJ += $(TESTS_OBJ)
 UNIT_TESTS_BIN = $(ROOT)/unit_tests
 
 all: run_unit_tests
+
+$(GTEST_OBJ): $(GTEST_SRC)
+	@mkdir -p $(shell dirname $@)
+	$(CXX) $(GTEST_CXXFLAGS) -c -o $@ $<
 
 $(TESTS_BUILD_DIR)/%.o: %.cpp
 	@mkdir -p $(shell dirname $@)
