Fix some unit tests

--- a/tests/functional_tests/Makefile
+++ b/tests/functional_tests/Makefile
@@ -17,7 +17,7 @@ functional_tests:
 	cd $(ROOT)
 
 	# No arguments
-	$(GENCC)
+	$(GENCC) | echo "Fail expected :)"
 
 	# Wrong arguments
 	$(GENCC) -asd -esd | echo "Fail expected :)"
