Fix unit tests build in Linux and removeFile added to Helper

--- a/tests/unit_tests/Makefile
+++ b/tests/unit_tests/Makefile
@@ -1,7 +1,7 @@
 ROOT = $(realpath $(CURDIR)/../..)
 include $(ROOT)/common.mk
 
-CXXFLAGS += -g -I$(CURDIR)/googletest -fsanitize=address
+CXXFLAGS += -g -I$(CURDIR)/googletest -fsanitize=address -pthread
 GTEST_CXXFLAGS := $(CXXFLAGS)
 LDFLAGS = --coverage
 
