--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,18 @@
 language: cpp
+os: linux
 dist: trusty
+
 compiler:
   - clang
   - gcc
-os: linux
-script: make
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-5
+      - clang
+
+script: 
+  make
