Try again TravisCI with g++-5 and clang-3.6

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,34 @@
 language: cpp
 os: linux
-dist: trusty
-
-compiler:
-  - clang
-  - gcc
 
 addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
+      - llvm-toolchain-precise-3.6
     packages:
       - g++-5
-      - clang
+      - clang-3.6
+
+matrix:
+  include:
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
+      env: COMPILER=g++-5
+    - compiler: clang
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.6
+          packages:
+            - clang-3.6
+      env: COMPILER=clang++-3.6
 
 script: 
   make
