--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-5
-      env: COMPILER=g++-5
+      env: CXX=g++-5
     - compiler: clang
       addons:
         apt:
@@ -28,7 +28,7 @@ matrix:
             - llvm-toolchain-precise-3.6
           packages:
             - clang-3.6
-      env: COMPILER=clang++-3.6
+      env: CXX=clang++-3.6
 
 script: 
   make
