--- a/tests/functional_tests/Makefile.dependencies
+++ b/tests/functional_tests/Makefile.dependencies
@@ -2,19 +2,28 @@ SRC_DIR = src
 SRC = $(wildcard $(SRC_DIR)/*.cpp $(SRC_DIR)/*.c)
 OBJ = $(SRC:.cpp=.cpp.o)
 OBJ := $(OBJ:.c=.c.o)
+DEP = $(OBJ:.o=.d)
 
-all: $(OBJ)
+all: clean $(OBJ)
 
 $(OBJ): clean
 
 $(SRC_DIR)/%.cpp.o: $(SRC_DIR)/%.cpp
+	$(CXX) -M $< -MF $@
+	$(CXX) -MM $< -MF $@
+	$(CXX) -MD $< -MF $@
+	$(CXX) -MMD $< -MF $@
 	$(CXX) -c -o $@ $<
 
 $(SRC_DIR)/%.c.o: $(SRC_DIR)/%.c
+	$(CC) -M $< -MF $@
+	$(CC) -MM $< -MF $@
+	$(CC) -MD $< -MF $@
+	$(CC) -MMD $< -MF $@
 	$(CC) -c -o $@ $<
 
 clean:
-	rm -f $(SRC_DIR)/*.o
+	rm -f $(SRC_DIR)/*.o $(SRC_DIR)/*.d
 
 dbg-%:
 	@echo "Makefile: Value of $* = $($*)"
