--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ matrix:
               description: "Build submitted via Travis CI"
             notification_email: pablo.marcos.oltra@gmail.com
             build_command_prepend: "make clean"
-            build_command:   "make -j4"
-            branch_pattern: coverity_scan
+            build_command: "make -j4"
+            branch_pattern: master
 
       after_success:
         - make -j4 coverage
